tests/compile-fail/integration_suite__integration__type_check__bad_declaration.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: unexpected token `%`
   ┌─ <input>:27:11
   │
27 │       int %x;  
   │           ^ unexpected token
   │
   = 
     Expected one of ";", "anim", "case", "default", "ecli", "entry", "mapfile", "script", "timeline" or IDENT


